<resources>
    <string name="app_name">minijuegos</string>
    <string name="llegandoalasestrellas">Legando a las Estrellas</string>
    <string name="memoriadepares">Memoria de Pares</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="memoriadesonidos">Memoria de Sonidos</string>
    <string name="select_game">Seleccione su minijuego</string>
    <string name="comming_soon">Coming soon (aun en progreso)</string>

    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>

</resources>