<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title Text -->
    <TextView
        android:id="@+id/selectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="16dp"
        android:text="@string/select_game"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/gameSelectionGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnCount="2"
        android:padding="3dp">

        <!-- Card for Memory Pairs Game -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardMemoryPairs"
            android:layout_width="0dp"
            android:layout_height="12dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:elevation="4dp"
            android:foreground="?attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:contentDescription="@string/memoriadepares"
                    android:scaleType="centerInside"
                    android:src="@drawable/memoriadepares" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/memoriadepares"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card for Tic Tac Toe Game -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardTicTacToe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:elevation="4dp"
            android:foreground="?attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="162dp"
                    android:contentDescription="@string/tictactoe"
                    android:scaleType="centerInside"
                    android:src="@drawable/tictactoe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/tictactoe"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card for Sound Memory Game -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardSoundMemory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:contentDescription="@string/memoriadesonidos"
                    android:scaleType="centerInside"
                    android:src="@drawable/memoriadesonidos" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memoriadesonidos"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:paddingTop="4dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card for Reach the Stars Game -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardReachStars"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:contentDescription="@string/llegandoalasestrellas"
                    android:scaleType="centerInside"
                    android:src="@drawable/llegandoalasestrellas" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/llegandoalasestrellas"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:paddingTop="4dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <!-- Button to Access High Scores -->
    <Button
        android:id="@+id/btnViewHighScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ver Puntajes"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />
</LinearLayout>
